--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>张佳媛的博客</title>
 </head>
 <body>
-    欢迎来到张佳媛的网站
+    <h1 style="color:red;">欢迎来到张佳媛的网站</h1>
 </body>
 </html>
