--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
     <title>张佳媛的博客</title>
 </head>
 <body>
-    <h1 style="color:red;">欢迎来到张佳媛的网站</h1>
+    <h1 style="color:red;">欢迎来到我们的网站</h1>
 </body>
 </html>
