--- a/index.html
+++ b/index.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1 style="color:red;">欢迎来到我们的网站</h1>
+    <br>
+
+            <h2>小组成员</h2>
+            <p>组长：应玲玲</p>
+            <p>组员：张佳媛</p>
+            <p>组员：江玲</p>
 </body>
 </html>
