--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>张佳媛的博客</title>
 </head>
 <body>
-    <h1 style="color:red;">欢迎来到我们的网站</h1>
+    <h1 style="color:red;"><text-align:center>欢迎来到我们的网站</text-align:center></h1>
     <br>
 
             <h2>小组成员</h2>
