--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>张佳媛的博客</title>
 </head>
 <body>
+        <style>
+                h1 {text-align:center;}
+                </style>
     <h1 style="color:red;"><text-align:center>欢迎来到我们的网站</text-align:center></h1>
     <br>
 
