--- a/index.html
+++ b/index.html
@@ -9,8 +9,12 @@
 <body>
         <style>
                 h1 {text-align:center;}
+                h1
+{
+	text-shadow: 5px 5px 5px rgb(219, 178, 216);
+}
                 </style>
-    <h1 style="color:red;"><text-align:center>欢迎来到我们的网站</text-align:center></h1>
+    <h1 style="color:rgb(42, 168, 226);">欢迎来到我们的网站</h1>
     <br>
 
             <h2>小组成员</h2>
