--- a/index.html
+++ b/index.html
@@ -5,8 +5,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>张佳媛的博客</title>
+    <style>
+            body
+            {
+                background-color:#b0c4de;
+            }
+            </style>
 </head>
-<body>
+    <body>
         <style>
                 h1 {text-align:center;}
                 h1
@@ -14,7 +20,7 @@
 	text-shadow: 5px 5px 5px rgb(219, 178, 216);
 }
                 </style>
-    <h1 style="color:rgb(42, 168, 226);"style="background-color:rgba(255,255,0,0.25)">欢迎来到我们的网站</h1>
+    <h1 style="color:rgb(42, 168, 226);">欢迎来到我们的网站</h1>
     <br>
 
             <h2>小组成员</h2>
