--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>张佳媛的博客</title>
+    <title>小组博客</title>
     <style>
             body
             {
-                background-color:#b0c4de;
+                background-color:#b0c2da;
             }
             </style>
 </head>
