--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	text-shadow: 5px 5px 5px rgb(219, 178, 216);
 }
                 </style>
-    <h1 style="color:rgb(42, 168, 226);">欢迎来到我们的网站</h1>
+    <h1 style="color:rgb(42, 168, 226);font-family:monospacemono;">欢迎来到我们的网站</h1>
     <br>
 
     <div id="container" style="width:500px">
