--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	text-shadow: 5px 5px 5px rgb(219, 178, 216);
 }
                 </style>
-    <h1 style="color:rgb(42, 168, 226);font-family:verdana;font: size 60;px;">欢迎来到我们的网站</h1>
+    <h1 style="color:rgb(42, 168, 226);font-family:verdana;font: size 60px;">欢迎来到我们的网站</h1>
     <br>
 
     <div id="container" style="width:1000px">
@@ -28,7 +28,7 @@
         <div id="header" style="background-color:#FFA500;">
         <h1 style="text-align:center;">信号小组</h1></div>
         
-        <div id="menu" style="background-color:#FFD700;height:100px;wideth:100px;float:left;">
+        <div id="menu" style="background-color:#FFD700;height:100px;width:100px;float:left;">
         <b>成员</b><br>
         组长：应玲玲<br>
         组员：张佳媛<br>
